Using compressed files, effect has its own table